# elm-forbid-import

./: .gitignore  BENCHMARKING.md  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
nix/: sources.json
script/: bench.sh  promote-golden-tests.sh  run-integration-tests.sh  update-subtrees.sh
src/: importfinder.rs  main.rs  store.rs
tests/golden-results/: all-clear-json.sh.config.toml  editor-output.sh.txt  forbid-html-no-hint.sh.config.toml  forbid-html-no-hint.sh.txt  forbid-html-with-hint.sh.txt  json-output.sh.config.toml  json-output.sh.txt  no-roots.sh.config.toml  no-roots.sh.txt  removed-forbidden.sh.config.toml  removed-forbidden.sh.txt
tests/integration/: all-clear-json.sh  all-clear.sh  editor-output.sh  forbid-html-no-hint.sh  forbid-html-with-hint.sh  json-output.sh  no-roots.sh  removed-forbidden.sh
