[package]
name = "elm-forbid-import"
version = "0.1.0"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
crossbeam = "0.8"
ignore = "0.4"
pathdiff = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"
tree-sitter = "0.17"

[build-dependencies]
cc = "*"
