[package]
name = "elm-forbid-import"
version = "0.1.0"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
crossbeam = "0.8"
ignore = "0.4"
lazy_static = "1.4"
pathdiff = "0.1"
regex = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"

[build-dependencies]
cc = "*"
